force-app/main/default/objects/Master_Review_List__c/Master_Review_List__c.object-meta.xml
<CustomObject>
    <label>Master Review List</label>
    <nameField>
        <label>Master Review List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Review Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>