force-app/main/default/objects/Master_Review_List__c/fields/Avo_Offset_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Offset_Type__c</fullName>
    <label>Offset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Days</fullName>
            </value>
            <value>
                <fullName>Calendar Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>