force-app/main/default/objects/Master_Review_List__c/fields/Avo_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Avo_Review_Status__c</fullName>
    <label>Review Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Review_Status</valueSetName>
    </valueSet>
</CustomField>