force-app/main/default/objects/Master_Review_List__c/fields/Avo_Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Review_Type__c</fullName>
    <label>Review Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Review_Type</valueSetName>
    </valueSet>
</CustomField>