force-app/main/default/objects/Master_Review_List__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Due Date</label>
    <type>TextArea</type>
</CustomField>