force-app/main/default/objects/Master_Review_List__c/listViews/AG_Program_Manager_Review_Master_Review_List.listView-meta.xml
<ListView>
    <fullName>AG_Program_Manager_Review_Master_Review_List</fullName>
    <filterScope>Queue</filterScope>
    <label>AG Program Manager Review</label>
    <queue>AG_Program_Manager_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>