force-app/main/default/objects/Master_Review_List__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Record_Type__c</columns>
    <columns>Avo_Permit_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>