force-app/main/default/objects/Master_Review_List__c/listViews/Director_Office_Review_Master_Review_List.listView-meta.xml
<ListView>
    <fullName>Director_Office_Review_Master_Review_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Director Office Review</label>
    <queue>Director_Office_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>