force-app/main/default/objects/Master_Review_List__c/listViews/Evaluation_of_Withdrawal_1st_Cut_Master_Review_List.listView-meta.xml
<ListView>
    <fullName>Evaluation_of_Withdrawal_1st_Cut_Master_Review_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Evaluation of Withdrawal 1st Cut</label>
    <queue>Evaluation_of_Withdrawal_1st_Cut</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>