force-app/main/default/objects/Master_Review_List__c/listViews/Final_Evaluation_Review_Master_Review_List.listView-meta.xml
<ListView>
    <fullName>Final_Evaluation_Review_Master_Review_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Final Evaluation Review</label>
    <queue>Final_Evaluation_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>