force-app/main/default/objects/Master_Review_List__c/listViews/Form_Assessment_Review_Master_Review_List.listView-meta.xml
<ListView>
    <fullName>Form_Assessment_Review_Master_Review_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Form Assessment Review</label>
    <queue>Form_Assessment_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>