force-app/main/default/objects/Master_Review_List__c/listViews/Irrigation_Efficiency_Cert_Review_Master_Review_List.listView-meta.xml
<ListView>
    <fullName>Irrigation_Efficiency_Cert_Review_Master_Review_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Irrigation Efficiency Cert Review</label>
    <queue>Irrigation_Efficiency_Cert_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>