force-app/main/default/objects/Master_Review_List__c/listViews/Low_Flow_Protection_Plan_Review_Master_Review_List.listView-meta.xml
<ListView>
    <fullName>Low_Flow_Protection_Plan_Review_Master_Review_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Low Flow Protection Plan Review</label>
    <queue>Low_Flow_Protection_Plan_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>