force-app/main/default/objects/Master_Review_List__c/listViews/Special_Appraisal_Master_Review_List.listView-meta.xml
<ListView>
    <fullName>Special_Appraisal_Master_Review_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Special Appraisal</label>
    <queue>Special_Appraisal</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>