force-app/main/default/objects/Master_Review_List__c/listViews/Waiver_Review_Master_Review_List.listView-meta.xml
<ListView>
    <fullName>Waiver_Review_Master_Review_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Waiver Review</label>
    <queue>Waiver_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>