force-app/main/default/objects/Master_Review_List__c/listViews/Water_Conservation_Plan_Review_Master_Review_List.listView-meta.xml
<ListView>
    <fullName>Water_Conservation_Plan_Review_Master_Review_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Water Conservation Plan Review</label>
    <queue>Water_Conservation_Plan_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>