force-app/main/default/objects/Master_Review_List__c/listViews/Water_Reuse_Visibility_Study_Review_Master_Review_List.listView-meta.xml
<ListView>
    <fullName>Water_Reuse_Visibility_Study_Review_Master_Review_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Water Reuse Visibility Study Review</label>
    <queue>Water_Reuse_Visibility_Study_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>