force-app/main/default/objects/Master_Review_List__c/listViews/Water_Shed_Manager_Review_Master_Review_List.listView-meta.xml
<ListView>
    <fullName>Water_Shed_Manager_Review_Master_Review_List</fullName>
    <filterScope>Queue</filterScope>
    <label>Water Shed Manager Review</label>
    <queue>Water_Shed_Manager_Review</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>